@@ -102,7 +102,7 @@ public record TextEmbeddingFloatResults(List<Embedding> embeddings)
         if (embeddings.isEmpty()) {
             throw new IllegalStateException("Embeddings list is empty");
         }
-        return embeddings.getFirst().values().length;
+        return embeddings.get(0).values().length;
     }
 
     @Override
